--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,10 +8,54 @@ button{
     margin:5px ;
 }
 img{
-    margin-top:5px;
-    
+    margin:5px auto;
+   
 }
 a{
-    height:26px;
+   
     margin-top:30px;
+}
+input{
+    margin-bottom:10px;
+
+}
+@media only screen and (max-width: 768px) {
+    img{
+        width:300px;
+        height: 300px;
+    }
+}
+
+/* @media only screen and (max-width: 767px) {
+    img{
+        width:300px;
+        height: 300px;
+    }
+} */
+@media only screen and (max-width: 650px) {
+    img{
+        width:250px;
+        height: 250px;
+    }
+}
+@media only screen and (max-width: 550px) {
+    img{
+        width:200px;
+        height: 200px;
+    }
+}
+@media only screen and (max-width: 450px) {
+    img{
+        width:150px;
+        height:150px;
+    }
+}
+@media only screen and (max-width: 350px) {
+    body{
+        min-width: 320px;
+    }
+    img{
+        width:100px;
+        height:100px;
+    }
 }
