--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,9 @@ body{
 button{
     margin:5px ;
 }
+.container{
+    align-items: center;
+}
 img{
     margin:5px auto;
    
@@ -18,6 +21,9 @@ a{
 input{
     margin-bottom:10px;
 
+}
+form{
+    margin-bottom:10px;
 }
 @media only screen and (max-width: 768px) {
     img{
